fix header sizing on mobile, fix about me broken height

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ a:visited{
 
 #about-me{
     background-color: white;
-    height:100vh;
+
 }
 
 #about-me p{
@@ -83,5 +83,21 @@ a:visited{
 @media (max-width: 1040px){
     h1{
         font-size:8rem;
+    }
+}
+
+@media (max-width: 705px){
+    h1{
+        font-size: 5rem;
+    }
+
+    #navbar ul{
+        text-align: center;
+        padding-top:10px;
+    }
+
+    #navbar ul li{
+        display: block;
+        margin-bottom: 10px;
     }
 }
